Fixed problem with cropping caused by spurious trigger

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -10075,8 +10075,8 @@ body.res div.beta-notice {
     -khtml-border-radius: 8px;
     border-radius: 8px;
     overflow: hidden;
-    height: 64px;
-    width: 64px;
+    height: 38px;
+    width: 38px;
 }
 
 .cropped-image-small {
@@ -10096,7 +10096,7 @@ body.res div.beta-notice {
 }
 
 .link_photo {
-  margin: 3px;
+  margin: 8px 3px 3px 3px;
   float: left;
 }
 
